// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      style=""
      type="button"
    >
      label coming from story args! 
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <div
      data-testid="local-decorator"
      style="margin: 3em;"
    >
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        style=""
        type="button"
      >
        foo 
        <!---->
      </button>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      style=""
      type="button"
    >
      foo 
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div>
      <p
        data-testid="custom-render"
      >
        I am a custom render function
      </p>
       
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        style=""
        type="button"
      >
        foo 
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <input
      data-testid="input"
    />
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--large storybook-button--primary"
      style=""
      type="button"
    >
      foo 
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders LoaderStory story 1`] = `
<body>
  <div>
    <div>
      <div
        data-testid="loaded-data"
      >
        loaded data
      </div>
       
      <div
        data-testid="spy-data"
      >
        mockFn return value
      </div>
    </div>
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;

exports[`Renders NewStory story 1`] = `
<body>
  <div>
    <div
      data-testid="local-decorator"
      style="margin: 3em;"
    >
      <button
        class="storybook-button storybook-button--large storybook-button--primary"
        style=""
        type="button"
      >
        foo 
        <!---->
      </button>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    
  </div>
</body>
`;
